work, no js yet

--- a/index.html
+++ b/index.html
@@ -5,11 +5,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simon CV</title>
+    <link rel="icon" href="./assets/cmd icon.png">
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@200&display=swap" rel="stylesheet">
+
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/common.css">
+
+    <!-- Javascript -->
+    <script defer src="./js/main.js"></script>
+
 </head>
 
-<body>
+<body class="flex justifycenter">
+
+    <div class="cmdContainer flex">
+        <div class="content">
+            <div class="header flex spacebetween">
+                <div class="left flex">
+                    <div class="icon"> <img src="assets/cmd icon.png"></img>
+                    </div>
+                    <div class="titleText flex aligncenter">Command Prompt</div>
+                </div>
+                <div class="right flex">
+                    <div class="toolsContainer flex aligncenter spacebetween">
+                        <div class="collapse"></div>
+                        <div class="fullscreen"></div>
+                        <div class="close">&times;</div>
+                    </div>
+                </div>
+            </div>
+            <div class="flex maincontainer">
+                <div class="main" id="main">
+                    Microsoft Windows [Version 10.0.19042.1337]
+                    <div class="flex">
+                        <p>(c) Microsoft Corporation&nbsp;</p>
+                        <div class="pressany"> Press any button to continue.</div>
+                    </div>
+
+                    <div class="conversation"></div>
+                    <div class="message">C:\Users\Simon> Welcome to my website on here you can find all relevant information regarding me!</div>
+
+                    <input class="inputfield" type="text">
+                    <div class="blinker">__</div>
+
+
+
+
+                    <div class="extender"> <br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br>                        <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br>                        <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br>                        <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br>                        <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br></div>
+                </div>
+            </div>
+        </div>
+
+
+
+    </div>
 
 </body>
+
+
 
 </html>
