decent progress, now JS starts after i get drag to work

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 </head>
 
-<body class="flex justifycenter">
-
+<body class="flex justifycenter aligncenter">
+    <video class="videobackground" src="./assets/background .mp4" autoplay loop muted type="video/mp4"></video>
     <div class="cmdContainer flex">
         <div class="content">
             <div class="header flex spacebetween">
@@ -52,8 +52,11 @@
                     <div class="conversation"></div>
                     <div class="message">C:\Users\Simon> Welcome to my website on here you can find all relevant information regarding me!</div>
 
-                    <input class="inputfield" type="text">
-                    <div class="blinker">__</div>
+                    <div class="flex">
+                        <input class="inputfield" type="text">
+                        <div class="blinker none">__</div>
+                    </div>
+
 
 
 
