--- a/index.html
+++ b/index.html
@@ -17,61 +17,64 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/mediaqueries.css">
 
     <!-- Javascript -->
     <script defer src="./js/main.js"></script>
 
 </head>
 
-<body class="flex justifycenter aligncenter">
+<body class="">
     <video class="videobackground" src="./assets/background .mp4" autoplay loop muted type="video/mp4"></video>
-    <div class="cmdContainer flex">
-        <div class="content">
-            <div class="header flex spacebetween">
-                <div class="left flex">
-                    <div class="icon"> <img src="assets/cmd icon.png"></img>
+    <div class="margin flex justifycenter">
+        <div class="cmdContainer absolute" id="drag">
+            <div class="content">
+
+                <div class="header flex spacebetween" id="dragheader">
+
+                    <div class="left flex">
+                        <div class="icon"> <img src="assets/cmd icon.png"></img>
+                        </div>
+
+                        <div class="titleText flex aligncenter">Command Prompt</div>
                     </div>
-                    <div class="titleText flex aligncenter">Command Prompt</div>
+
+                    <div class="right flex">
+                        <div class="toolsContainer flex aligncenter spacebetween">
+                            <div class="collapse"></div>
+                            <div class="fullscreen"></div>
+                            <div class="close">&times;</div>
+                        </div>
+                    </div>
+
                 </div>
-                <div class="right flex">
-                    <div class="toolsContainer flex aligncenter spacebetween">
-                        <div class="collapse"></div>
-                        <div class="fullscreen"></div>
-                        <div class="close">&times;</div>
+
+                <div class="flex maincontainer">
+                    <div class="main" id="main">
+
+                        Microsoft Windows [Version 10.0.19042.1337]
+
+                        <div class="flex">
+                            <p>(c) Microsoft Corporation &nbsp;</p>
+                            <div class="pressany"> Press any button to continue.</div>
+                        </div>
+
+                        <div class="conversation">
+                            <div class="message">C:\Users\Simon> Welcome to my website on here you can find all relevant information regarding me!</div>
+                            <div class="message">C:\Users\Simon> Type “CV” for my written CV, “Projects” for my past projects and “Github” for a link to my Github page!</div>
+                        </div>
+
+                        <div class="flex">
+                            <input class="inputfield" autofocus type="text">
+                            <div class="blinker none">__</div>
+                        </div>
+
                     </div>
                 </div>
-            </div>
-            <div class="flex maincontainer">
-                <div class="main" id="main">
-                    Microsoft Windows [Version 10.0.19042.1337]
-                    <div class="flex">
-                        <p>(c) Microsoft Corporation&nbsp;</p>
-                        <div class="pressany"> Press any button to continue.</div>
-                    </div>
 
-                    <div class="conversation"></div>
-                    <div class="message">C:\Users\Simon> Welcome to my website on here you can find all relevant information regarding me!</div>
-
-                    <div class="flex">
-                        <input class="inputfield" type="text">
-                        <div class="blinker none">__</div>
-                    </div>
-
-
-
-
-
-                    <div class="extender"> <br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br>                        <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br>                        <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br>                        <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br>                        <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br><br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br></div>
-                </div>
             </div>
         </div>
-
-
-
     </div>
-
 </body>
-
-
 
 </html>
