--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         Microsoft Windows [Version 10.0.19042.1337]
 
                         <div class="flex">
-                            <p>(c) Microsoft Corporation &nbsp;</p>
+                            <div>(c) Microsoft Corporation &nbsp;</div>
                             <div class="pressany"> Press any button to continue.</div>
                         </div>
 
