Done, only comments left

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
                             <div class="pressany" id="pressany"> Press any button to continue.</div>
                         </div>
 
-                        <div class="conversation">
+                        <div class="conversation" id="conversation">
                             <div class="message none" id="stepone">C:\Users\Simon> Welcome to my website on here you can find all relevant information regarding me!</div>
                             <div class="message none" id="steptwo">C:\Users\Simon> Type “CV” for my written CV, “Projects” for my past projects and “Github” for a link to my Github page!</div>
                         </div>
 
                         <div class="flex">
-                            <input class="inputfield blinker largetext" autofocus type="text" id="inputfield" placeholder="__">
+                            <input class="inputfield blinker largetext" name="input" autofocus type="text" id="input" placeholder="__">
                         </div>
 
                     </div>
