--- a/index.html
+++ b/index.html
@@ -47,9 +47,20 @@
 
                     <div class="right flex">
                         <div class="toolsContainer flex aligncenter spacebetween">
-                            <div class="collapse"></div>
-                            <div class="fullscreen"></div>
-                            <div class="close">&times;</div>
+                            <div class="collapsecontain flex justifycenter aligncenter" id="collapse">
+                                <div class="collapse"></div>
+                            </div>
+
+                            <div class="fullscreencontain flex justifycenter aligncenter" id="fullscreen">
+                                <div class="fullscreen"></div>
+                            </div>
+
+                            <div class="closecontain flex justifycenter aligncenter" id="close">
+                                <div class="close">&times;</div>
+                            </div>
+
+
+
                         </div>
                     </div>
 
