browser version check and linkedin in text

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <!-- Javascript -->
     <script defer src="./js/main.js"></script>
     <script defer src="./js/drag.js"></script>
+    <script defer src="./js/version.js"></script>
 
 </head>
 
@@ -68,8 +69,10 @@
                 <!-- Content of the window -->
                 <div class="flex maincontainer">
                     <div class="main" id="main">
+                        <div id="version">
+                            Microsoft Windows [Version 10.0.19042.1337]
+                        </div>
 
-                        Microsoft Windows [Version 10.0.19042.1337]
 
                         <div class="flex">
                             <p>(c) Microsoft Corporation &nbsp;</p>
@@ -78,7 +81,7 @@
                         <!-- This is where the conversation is had and all the responses are created within -->
                         <div class="conversation" id="conversation">
                             <div class="message none" id="stepone">C:\Users\Simon> Welcome to my website on here you can find all relevant information regarding me!</div>
-                            <div class="message none" id="steptwo">C:\Users\Simon> Type “CV” for my written CV, “Projects” for my past projects and “Github” for a link to my Github page!</div>
+                            <div class="message none" id="steptwo">C:\Users\Simon> Type “CV” for my written CV, “Projects” for my past projects and “Github” for a link to my Github page or "LinkedIn" for my LinkedIn!</div>
                         </div>
                         <!-- Inputfield -->
                         <div class="flex">
