update on link and minor changes

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 
                         <div class="flex">
-                            <p>(c) Microsoft Corporation &nbsp;</p>
+                            <p>(c) Simon Eriksson Incorporated &nbsp;</p>
                             <div class="pressany" id="pressany"> Press any button to continue.</div>
                         </div>
                         <!-- This is where the conversation is had and all the responses are created within -->
