added close button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <video class="videobackground" src="./assets/background .mp4" autoplay loop muted type="video/mp4" id="video"></video>
 
     <!-- Main window, everything you can interact with is in here -->
-    <div class="margin flex justifycenter">
+    <div class="margin flex justifycenter" id="terminal">
         <div class="cmdContainer absolute" id="drag">
             <div class="content">
                 <!-- Header of the window -->
